stop autocomplete suggestions overflowing their container

--- a/src/styles/components/_autocomplete.scss
+++ b/src/styles/components/_autocomplete.scss
@@ -87,6 +87,7 @@ span.user-contact {
 .ui-autocomplete {
   width: 250px !important;
   background: #fff;
+  overflow: hidden;
 }
 
 .ui-helper-hidden-accessible {
